@@ -5,8 +5,8 @@ bt.initwinsock ()
 
 # ============== SDP service registration and unregistration ============
 
-def discover_devices (duration=8, flush_cache=True, lookup_names=False):
-    return bt.discover_devices (flush_cache, lookup_names)
+def discover_devices (duration=8, flush_cache=True, lookup_names=False, lookup_class=False):
+    return bt.discover_devices (flush_cache, lookup_names, lookup_class)
 
 def lookup_name (address, timeout=10):
     if not is_valid_address (address): 
